--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  image_picker: ^0.6.2
+  cloud_firestore: ^0.14.0
+  firebase_storage: ^4.0.0
+  firebase_core: ^0.5.0
+
   flutter:
     sdk: flutter
 
