--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  intl: ^0.16.1
   image_picker: ^0.6.2
   cloud_firestore: ^0.14.0
   firebase_storage: ^4.0.0
