--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cloud_firestore: ^0.14.0
   firebase_storage: ^4.0.0
   firebase_core: ^0.5.0
+  location: ^3.0.0
 
   flutter:
     sdk: flutter
