--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_storage: ^4.0.0
   firebase_core: ^0.5.0
   location: ^3.0.0
+  test: ^1.14.1
 
   flutter:
     sdk: flutter
